@@ -25,9 +25,9 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|hbase
+name|conf
 operator|.
-name|HClient
+name|Configuration
 import|;
 end_import
 
@@ -50,8 +50,8 @@ specifier|public
 name|ReturnMsg
 name|execute
 parameter_list|(
-name|HClient
-name|client
+name|Configuration
+name|conf
 parameter_list|)
 function_decl|;
 block|}
