@@ -45,9 +45,23 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
-name|HClient
+name|HBaseAdmin
 import|;
 end_import
 
@@ -75,7 +89,49 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|HConnection
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HConnectionManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|HTableDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|Text
 import|;
 end_import
 
@@ -86,15 +142,23 @@ name|CreateCommand
 extends|extends
 name|BasicCommand
 block|{
-name|String
+specifier|private
+name|Text
 name|table
 decl_stmt|;
+specifier|private
 name|List
 argument_list|<
 name|String
 argument_list|>
 name|columnfamilies
 decl_stmt|;
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unused"
+argument_list|)
+specifier|private
 name|int
 name|limit
 decl_stmt|;
@@ -102,8 +166,8 @@ specifier|public
 name|ReturnMsg
 name|execute
 parameter_list|(
-name|HClient
-name|client
+name|Configuration
+name|conf
 parameter_list|)
 block|{
 if|if
@@ -131,6 +195,47 @@ argument_list|)
 return|;
 try|try
 block|{
+name|HConnection
+name|conn
+init|=
+name|HConnectionManager
+operator|.
+name|getConnection
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|HBaseAdmin
+name|admin
+init|=
+operator|new
+name|HBaseAdmin
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|conn
+operator|.
+name|tableExists
+argument_list|(
+name|this
+operator|.
+name|table
+argument_list|)
+condition|)
+block|{
+return|return
+operator|new
+name|ReturnMsg
+argument_list|(
+literal|0
+argument_list|,
+literal|"Table was already exsits."
+argument_list|)
+return|;
+block|}
 name|HTableDescriptor
 name|desc
 init|=
@@ -140,6 +245,9 @@ argument_list|(
 name|this
 operator|.
 name|table
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 decl_stmt|;
 for|for
@@ -222,7 +330,7 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-name|client
+name|admin
 operator|.
 name|createTable
 argument_list|(
@@ -273,7 +381,11 @@ name|this
 operator|.
 name|table
 operator|=
+operator|new
+name|Text
+argument_list|(
 name|table
+argument_list|)
 expr_stmt|;
 block|}
 specifier|public
