@@ -65,9 +65,23 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
-name|HClient
+name|HTable
 import|;
 end_import
 
@@ -92,9 +106,11 @@ name|DeleteCommand
 extends|extends
 name|BasicCommand
 block|{
-name|String
+specifier|private
+name|Text
 name|table
 decl_stmt|;
+specifier|private
 name|Map
 argument_list|<
 name|String
@@ -110,8 +126,8 @@ specifier|public
 name|ReturnMsg
 name|execute
 parameter_list|(
-name|HClient
-name|client
+name|Configuration
+name|conf
 parameter_list|)
 block|{
 if|if
@@ -137,23 +153,23 @@ argument_list|)
 return|;
 try|try
 block|{
-name|client
-operator|.
-name|openTable
-argument_list|(
+name|HTable
+name|table
+init|=
 operator|new
-name|Text
+name|HTable
 argument_list|(
+name|conf
+argument_list|,
 name|this
 operator|.
 name|table
 argument_list|)
-argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|long
 name|lockId
 init|=
-name|client
+name|table
 operator|.
 name|startUpdate
 argument_list|(
@@ -169,7 +185,7 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|client
+name|table
 operator|.
 name|delete
 argument_list|(
@@ -188,7 +204,7 @@ name|Text
 argument_list|>
 name|keySet
 init|=
-name|client
+name|table
 operator|.
 name|getRow
 argument_list|(
@@ -234,7 +250,7 @@ name|i
 operator|++
 control|)
 block|{
-name|client
+name|table
 operator|.
 name|delete
 argument_list|(
@@ -248,7 +264,7 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-name|client
+name|table
 operator|.
 name|commit
 argument_list|(
@@ -299,7 +315,11 @@ name|this
 operator|.
 name|table
 operator|=
+operator|new
+name|Text
+argument_list|(
 name|table
+argument_list|)
 expr_stmt|;
 block|}
 specifier|public
