@@ -35,9 +35,37 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
-name|HClient
+name|HConnection
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HConnectionManager
 import|;
 end_import
 
@@ -76,22 +104,23 @@ name|DescCommand
 extends|extends
 name|BasicCommand
 block|{
-name|String
-name|argument
+specifier|private
+name|Text
+name|table
 decl_stmt|;
 specifier|public
 name|ReturnMsg
 name|execute
 parameter_list|(
-name|HClient
-name|client
+name|Configuration
+name|conf
 parameter_list|)
 block|{
 if|if
 condition|(
 name|this
 operator|.
-name|argument
+name|table
 operator|==
 literal|null
 condition|)
@@ -106,11 +135,44 @@ argument_list|)
 return|;
 try|try
 block|{
+name|HConnection
+name|conn
+init|=
+name|HConnectionManager
+operator|.
+name|getConnection
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|conn
+operator|.
+name|tableExists
+argument_list|(
+name|this
+operator|.
+name|table
+argument_list|)
+condition|)
+block|{
+return|return
+operator|new
+name|ReturnMsg
+argument_list|(
+literal|0
+argument_list|,
+literal|"Table not found."
+argument_list|)
+return|;
+block|}
 name|HTableDescriptor
 index|[]
 name|tables
 init|=
-name|client
+name|conn
 operator|.
 name|listTables
 argument_list|()
@@ -148,14 +210,11 @@ operator|.
 name|getName
 argument_list|()
 operator|.
-name|toString
-argument_list|()
-operator|.
 name|equals
 argument_list|(
 name|this
 operator|.
-name|argument
+name|table
 argument_list|)
 condition|)
 block|{
@@ -181,23 +240,6 @@ block|{}
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-if|if
-condition|(
-name|columns
-operator|==
-literal|null
-condition|)
-block|{
-return|return
-operator|new
-name|ReturnMsg
-argument_list|(
-literal|0
-argument_list|,
-literal|"Table not found."
-argument_list|)
-return|;
 block|}
 name|ConsoleTable
 operator|.
@@ -297,14 +339,18 @@ name|void
 name|setArgument
 parameter_list|(
 name|String
-name|argument
+name|table
 parameter_list|)
 block|{
 name|this
 operator|.
-name|argument
+name|table
 operator|=
-name|argument
+operator|new
+name|Text
+argument_list|(
+name|table
+argument_list|)
 expr_stmt|;
 block|}
 block|}
