@@ -35,9 +35,23 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
-name|HClient
+name|HBaseAdmin
 import|;
 end_import
 
@@ -62,22 +76,23 @@ name|DropCommand
 extends|extends
 name|BasicCommand
 block|{
-name|String
-name|argument
+specifier|private
+name|Text
+name|table
 decl_stmt|;
 specifier|public
 name|ReturnMsg
 name|execute
 parameter_list|(
-name|HClient
-name|client
+name|Configuration
+name|conf
 parameter_list|)
 block|{
 if|if
 condition|(
 name|this
 operator|.
-name|argument
+name|table
 operator|==
 literal|null
 condition|)
@@ -92,17 +107,22 @@ argument_list|)
 return|;
 try|try
 block|{
-name|client
+name|HBaseAdmin
+name|admin
+init|=
+operator|new
+name|HBaseAdmin
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|admin
 operator|.
 name|deleteTable
 argument_list|(
-operator|new
-name|Text
-argument_list|(
 name|this
 operator|.
-name|argument
-argument_list|)
+name|table
 argument_list|)
 expr_stmt|;
 return|return
@@ -142,14 +162,18 @@ name|void
 name|setArgument
 parameter_list|(
 name|String
-name|argument
+name|table
 parameter_list|)
 block|{
 name|this
 operator|.
-name|argument
+name|table
 operator|=
-name|argument
+operator|new
+name|Text
+argument_list|(
+name|table
+argument_list|)
 expr_stmt|;
 block|}
 block|}
