@@ -25,9 +25,9 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|hbase
+name|conf
 operator|.
-name|HClient
+name|Configuration
 import|;
 end_import
 
@@ -38,6 +38,7 @@ name|HelpCommand
 extends|extends
 name|BasicCommand
 block|{
+specifier|private
 name|String
 name|argument
 decl_stmt|;
@@ -45,8 +46,8 @@ specifier|public
 name|ReturnMsg
 name|execute
 parameter_list|(
-name|HClient
-name|client
+name|Configuration
+name|conf
 parameter_list|)
 block|{
 name|HelpManager
