@@ -55,9 +55,23 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
-name|HClient
+name|HTable
 import|;
 end_import
 
@@ -82,21 +96,25 @@ name|InsertCommand
 extends|extends
 name|BasicCommand
 block|{
-name|String
+specifier|private
+name|Text
 name|table
 decl_stmt|;
+specifier|private
 name|List
 argument_list|<
 name|String
 argument_list|>
 name|columnfamilies
 decl_stmt|;
+specifier|private
 name|List
 argument_list|<
 name|String
 argument_list|>
 name|values
 decl_stmt|;
+specifier|private
 name|Map
 argument_list|<
 name|String
@@ -112,8 +130,8 @@ specifier|public
 name|ReturnMsg
 name|execute
 parameter_list|(
-name|HClient
-name|client
+name|Configuration
+name|conf
 parameter_list|)
 block|{
 if|if
@@ -172,32 +190,28 @@ argument_list|)
 return|;
 try|try
 block|{
-name|client
-operator|.
-name|openTable
-argument_list|(
+name|HTable
+name|table
+init|=
 operator|new
-name|Text
+name|HTable
 argument_list|(
+name|conf
+argument_list|,
 name|this
 operator|.
 name|table
 argument_list|)
-argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|long
 name|lockId
 init|=
-name|client
+name|table
 operator|.
 name|startUpdate
 argument_list|(
-operator|new
-name|Text
-argument_list|(
 name|getRow
 argument_list|()
-argument_list|)
 argument_list|)
 decl_stmt|;
 for|for
@@ -220,7 +234,7 @@ name|i
 operator|++
 control|)
 block|{
-name|client
+name|table
 operator|.
 name|put
 argument_list|(
@@ -238,7 +252,7 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-name|client
+name|table
 operator|.
 name|commit
 argument_list|(
@@ -301,7 +315,11 @@ name|this
 operator|.
 name|table
 operator|=
+operator|new
+name|Text
+argument_list|(
 name|table
+argument_list|)
 expr_stmt|;
 block|}
 specifier|public
