@@ -65,9 +65,23 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
-name|HClient
+name|HBaseAdmin
 import|;
 end_import
 
@@ -137,6 +151,20 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|HTable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|HTableDescriptor
 import|;
 end_import
@@ -176,12 +204,15 @@ name|SelectCommand
 extends|extends
 name|BasicCommand
 block|{
-name|String
+specifier|private
+name|Text
 name|table
 decl_stmt|;
+specifier|private
 name|int
 name|limit
 decl_stmt|;
+specifier|private
 name|Map
 argument_list|<
 name|String
@@ -197,8 +228,8 @@ specifier|public
 name|ReturnMsg
 name|execute
 parameter_list|(
-name|HClient
-name|client
+name|Configuration
+name|conf
 parameter_list|)
 block|{
 if|if
@@ -229,19 +260,28 @@ argument_list|)
 return|;
 try|try
 block|{
-name|client
-operator|.
-name|openTable
-argument_list|(
+name|HTable
+name|table
+init|=
 operator|new
-name|Text
+name|HTable
 argument_list|(
+name|conf
+argument_list|,
 name|this
 operator|.
 name|table
 argument_list|)
+decl_stmt|;
+name|HBaseAdmin
+name|admin
+init|=
+operator|new
+name|HBaseAdmin
+argument_list|(
+name|conf
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 switch|switch
 condition|(
 name|getCondition
@@ -255,7 +295,7 @@ name|HTableDescriptor
 index|[]
 name|tables
 init|=
-name|client
+name|admin
 operator|.
 name|listTables
 argument_list|()
@@ -277,9 +317,6 @@ argument_list|(
 name|HConstants
 operator|.
 name|ROOT_TABLE_NAME
-operator|.
-name|toString
-argument_list|()
 argument_list|)
 operator|||
 name|this
@@ -291,9 +328,6 @@ argument_list|(
 name|HConstants
 operator|.
 name|META_TABLE_NAME
-operator|.
-name|toString
-argument_list|()
 argument_list|)
 condition|)
 block|{
@@ -333,9 +367,6 @@ operator|.
 name|getName
 argument_list|()
 operator|.
-name|toString
-argument_list|()
-operator|.
 name|equals
 argument_list|(
 name|this
@@ -371,7 +402,7 @@ block|}
 name|HScannerInterface
 name|scan
 init|=
-name|client
+name|table
 operator|.
 name|obtainScanner
 argument_list|(
@@ -602,7 +633,7 @@ index|[]
 argument_list|>
 name|entry
 range|:
-name|client
+name|table
 operator|.
 name|getRow
 argument_list|(
@@ -753,7 +784,7 @@ decl_stmt|;
 name|HScannerInterface
 name|scanner
 init|=
-name|client
+name|table
 operator|.
 name|obtainScanner
 argument_list|(
@@ -906,7 +937,7 @@ name|byte
 index|[]
 name|rs1
 init|=
-name|client
+name|table
 operator|.
 name|get
 argument_list|(
@@ -967,7 +998,7 @@ index|[]
 index|[]
 name|rs2
 init|=
-name|client
+name|table
 operator|.
 name|get
 argument_list|(
@@ -1053,7 +1084,7 @@ index|[]
 index|[]
 name|rs3
 init|=
-name|client
+name|table
 operator|.
 name|get
 argument_list|(
@@ -1187,7 +1218,11 @@ name|this
 operator|.
 name|table
 operator|=
+operator|new
+name|Text
+argument_list|(
 name|table
+argument_list|)
 expr_stmt|;
 block|}
 specifier|public
