@@ -35,9 +35,23 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
-name|HClient
+name|HBaseAdmin
 import|;
 end_import
 
@@ -62,22 +76,23 @@ name|ShowCommand
 extends|extends
 name|BasicCommand
 block|{
+specifier|private
 name|String
-name|argument
+name|command
 decl_stmt|;
 specifier|public
 name|ReturnMsg
 name|execute
 parameter_list|(
-name|HClient
-name|client
+name|Configuration
+name|conf
 parameter_list|)
 block|{
 if|if
 condition|(
 name|this
 operator|.
-name|argument
+name|command
 operator|==
 literal|null
 condition|)
@@ -92,6 +107,15 @@ argument_list|)
 return|;
 try|try
 block|{
+name|HBaseAdmin
+name|admin
+init|=
+operator|new
+name|HBaseAdmin
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
 name|int
 name|tableLength
 init|=
@@ -105,7 +129,7 @@ name|equals
 argument_list|(
 name|this
 operator|.
-name|argument
+name|command
 argument_list|)
 condition|)
 block|{
@@ -113,7 +137,7 @@ name|HTableDescriptor
 index|[]
 name|tables
 init|=
-name|client
+name|admin
 operator|.
 name|listTables
 argument_list|()
@@ -246,7 +270,7 @@ parameter_list|)
 block|{
 name|this
 operator|.
-name|argument
+name|command
 operator|=
 name|argument
 expr_stmt|;
